# sqlize

./: .gitignore  README.md  pyproject.toml
pysqlbuilder/: __init__.py  column.py  expression.py  shared.py  supports.py  table.py
pysqlbuilder/connections/: __init__.py  mssql.py  mysql.py  odbc.py  oracle.py  postgresql.py  setup.py  sqlite.py
pysqlbuilder/dml/: __init__.py  delete.py  insert.py  select.py  update.py  upsert.py
simple_sql_builder/: __init__.py  column.py  connection.py  expression.py  insert.py  join.py  parameters.py  select.py  shared.py  supports.py  table.py  update.py
simple_sql_builder/connections/: __init__.py  mssql.py  mysql.py  odbc.py  oracle.py  postgresql.py  setup.py  sqlite.py
simple_sql_builder/dml/: delete.py  insert.py  select.py  update.py  upsert.py
sqlize/: __init__.py  column.py  expression.py  parameters.py  shared.py  supports.py  table.py
sqlize/connections/: __init__.py  mssql.py  mysql.py  odbc.py  oracle.py  postgresql.py  setup.py  sqlite.py
sqlize/dml/: __init__.py  delete.py  insert.py  select.py  update.py  upsert.py
sqlize/orm/: __init__.py  column.py  exceptions.py  insert.py  interface.py  introspect.py  model.py  select.py
sqlize/statement/: __init__.py  delete.py  insert.py  interface.py  select.py  update.py  upsert.py
