[project]
name = "simple-sql-builder"
version = "1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

[project.optional-dependencies]
odbc = ["pyodbc"]
mysql = ["PyMySQL"]
mssql = ["mssql-python"]
postgresql = ["psycopg[binary]"]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
