[project]
name = "sqlize"
version = "1.1"
license = "MIT"
description = "Create SQL syntax with a natural python builder. Supports automatic execution on multiple connections"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "msgspec>=0.21.1",
]

[project.optional-dependencies]
odbc = ["pyodbc"]
mssql = ["mssql-python"]
mysql = ["mysql-connector-python"]
oracle = ["oracledb"]
postgresql = ["psycopg[binary]"]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
